fix user endpoints
