# src/models/enums.ts
@@ -4,12 +4,12 @@ export enum UserLevel {
 }
 
 export enum City {
-  EKATERINBURG = 'Ekaterinburg',
-  TYUMEN = 'Tyumen',
-  TAMBOV = 'Tambov',
-  MAGADAN = 'Magadan',
-  VORKUTA = 'Vorkuta',
-  MOSCOW = 'Moscow',
+  PARIS = 'Paris',
+  COLOGNE = 'Cologne',
+  BRUSSELS = 'Brussels',
+  AMSTERDAM = 'Amsterdam',
+  HAMBURG = 'Hamburg',
+  DUSSELDORF = 'Dusseldorf',
 }
 
 export enum HousingType {
